RESOLVED FIXED258556
WasmSignalHandler.cpp doesn't compile on Windows
https://bugs.webkit.org/show_bug.cgi?id=258556
Summary WasmSignalHandler.cpp doesn't compile on Windows
Hayashida Ryuichi
Reported 2023-06-27 03:25:52 PDT
wasm/WasmFaultSignalHandler.cpp doesn't compile on Windows because it uses wtf/threads/Signals.h. This is because Signals.h misses many APIs such as Signal class when it is not on Unix platform.
Attachments
Yusuke Suzuki
Comment 1 2023-06-30 02:05:53 PDT
The same interface needs to be implemented on Windows with vectored exception handlers.
Radar WebKit Bug Importer
Comment 2 2023-07-04 03:26:14 PDT
Hayashida Ryuichi
Comment 3 2023-07-11 06:54:10 PDT
I'd like to prioritize fixing llint for Wasm on Windows at first since it prevents Wasm feature from being enabled on Windows. For now, I want to just disable the signal handlers on Windows. For implementing signals on Windows, I created the ticket bug259108. I'd like to work on signal handlers for Windows in the ticket once Wasm implementation starts to work on Windows.
Hayashida Ryuichi
Comment 4 2023-07-11 07:08:54 PDT
EWS
Comment 5 2023-07-11 13:32:17 PDT
Committed 265964@main (62ac852fe74f): <https://commits.webkit.org/265964@main> Reviewed commits have been landed. Closing PR #15740 and removing active labels.
Yusuke Suzuki
Comment 6 2023-07-11 16:03:09 PDT
Note that wasm shared memory requires this as a mandatory option, so it must be implemented before enabling wasm.
Hayashida Ryuichi
Comment 7 2023-07-18 03:05:39 PDT
Thank you. I need to understand how the shared memory works.
Note You need to log in before you can comment on or make changes to this bug.