Fix WasmFaultSignalHandler.cpp doesn't compile on Windows https://bugs.webkit.org/show_bug.cgi?id=258556

Reviewed by Ross Kirsling.

WTF/wtf/threads/Signals.cpp assumes Unix platforms but
WasmFaultSignalHandler.cpp uses the signals API without checking the
platform.

This patch avoids setting the signal handlers not to use the signals
API so that it doesn't break Windows build.

This is a temporary fix. Signal handlers for WIndows are eventually
implemented at https://bugs.webkit.org/show_bug.cgi?id=259108

* Source/JavaScriptCore/wasm/WasmFaultSignalHandler.cpp:
* Source/JavaScriptCore/wasm/WasmFaultSignalHandler.h:

Canonical link: https://commits.webkit.org/265964@main