Source/JavaScriptCore/wasm/WasmFaultSignalHandler.cpp
@@ -26,7 +26,8 @@
 #include "config.h"
 #include "WasmFaultSignalHandler.h"
 
-#if ENABLE(WEBASSEMBLY)
+// FIXME: https://bugs.webkit.org/show_bug.cgi?id=259108 Support signal handlers on Windows
+#if ENABLE(WEBASSEMBLY) && OS(UNIX)
 
 #include "ExecutableAllocator.h"
 #include "LLIntData.h"
@@ -132,5 +133,5 @@ void prepareSignalingMemory()
     
 } } // namespace JSC::Wasm
 
-#endif // ENABLE(WEBASSEMBLY)
+#endif // ENABLE(WEBASSEMBLY) && OS(UNIX)
 
